--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,16 @@
-# Stores information about all libraries, modules and packages that are used in the development of a particular project. It also stores all the files and packages that this project depends on or needs to run.
-SpeechRecognition=3.9.0
-PyAudio=0.2.13
+# Libraries to launch the bot
+SpeechRecognition==3.9.0
+PyAudio==0.2.13
+requests==2.28.2
+pyttsx3==2.90
+
+# Libraries that the bot can use
+NumPy==1.24.2
+Pandas==1.5.3
+opencv-python==4.7.0.72
+beautifulsoup4==4.11.2
+PyAutoGUI==0.9.53
+PyPDF2==3.0.1
+Pillow==9.4.0
+AppOpener==1.6
+pyperclip==1.8.2
