--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 { "$schema": {
-  "language": "english",
+  "language": "ukrainian",
+  "languageCode": "uk-UA",
   "nameOfUser": "Jerry",
   "nameOfBot": "Radenbeg (Rad)",
   "formats": "24-hour, dd.mm.yyyy, Celsius, metric"
