feat: improve prompt

--- a/config.json
+++ b/config.json
@@ -2,6 +2,6 @@
   "language": "ukrainian",
   "languageCode": "uk-UA",
   "nameOfUser": "Jerry",
-  "nameOfBot": "Radenbeg (Rad)",
+  "nameOfBot": "Radenbeg (shorter: Rad)",
   "formats": "24-hour, dd.mm.yyyy, Celsius, metric"
 } }
