--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ EdgeGPT==0.0.55
 SpeechRecognition==3.9.0
 PyAudio==0.2.13
 requests==2.28.2
-pyttsx3==2.90
+gTTS==2.3.1
+playsound==1.3.0
 
 # Libraries that the bot can use
 NumPy==1.24.2
